# estim-bci-paradigm

./: .gitignore  README.md  common.py  config.toml  create_desktop_shortcut.ps1  doctor.py  doctor_config.toml  lsl_marker_to_uart.py  lsl_markers.toml  patient.py  patient_config.toml  pyproject.toml  start_components.bat
